[package]
name = "mac_sniff"
version = "0.1.0"
authors = ["kirkbyers <kirklbyers@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "mac_sniff"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce codegen units to increase optimizations
strip = true         # Strip symbols from binary
panic = "abort"      # Abort on panic

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
strip = "debuginfo"  # Strip debug info but keep symbols

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-svc = { path = '../esp-idf-svc', features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "^0.45"
anyhow = "1.0.97"
embedded-graphics = "0.8"
ssd1306 = "0.8"
display-interface = "0.4"

[build-dependencies]
embuild = "0.33"
